# Master_Degree

HAI702I/TP1/: Makefile
HAI712I/TP1/src/: AbstractDictionary.java  OrderedDictionary.java
HAI714I/TP1/: tp
HAI720I/TP1/: evalPerf  evalPerf.h
M1/S8/HAI801I_algo_exploration/BFS_DFS/: Node.js  index.html  script.js
M1/S8/HAI801I_algo_exploration/MINMAX/: index.html  script.js  styles.css
M1/S8/HAI809I_compression_multimedia/TP1/: main  main.cpp
M1/s7/HAI701I_Signal/: Main.cpp  Makefile  Wave.cpp  Wave.hpp  main
M1/s7/HAI702I/TP1/: tp
M1/s7/HAI702I_algebre/TP1/: tp.cpp
M1/s7/HAI712I_poo/TP3/: Client.java  CompteAvecReduction.java  main.java
M1/s7/HAI714I/TP1/: README.md
M1/s7/HAI714I/TP2/: tp  tp.cpp
M1/s7/HAI714I_mode/TP1/: tp.cpp
M1/s7/HAI714I_mode/TP2/: .gitignore  tp  tp.cpp
M1/s7/HAI714I_mode/TP3/: tp  tp.cpp
M1/s7/HAI714I_mode/TP4/: tp  tp.cpp
M1/s7/HAI714I_mode/TP5/: tp  tp.cpp
M1/s7/HAI714I_mode/TP6/: index.htm
M1/s7/HAI714I_mode/TP7/: index.html
M1/s7/HAI714I_mode/TP_GMAP/: CMakeLists.txt  README.md
M1/s7/HAI714I_mode/TP_GMAP/common/: controls.cpp
M1/s7/HAI714I_mode/TP_GMAP/src/: fragment_shader.glsl  gmap.cpp  gmap.hpp  gmap_display.cpp  gmap_helper.cpp  gmap_main.cpp  vertex_shader.glsl
M1/s7/HAI719I_prog3D/TP1/: tp.cpp
M1/s7/HAI719I_prog3D/TP2/: Makefile  fragment_shader.glsl  tp  tp.cpp  vertex_shader.glsl
M1/s7/HAI719I_prog3D/TP5/: BaseGL  CMakeLists.txt
M1/s7/HAI719I_prog3D/projet/: Makefile  main  main.cpp  rendu.ppm  rendu_2.ppm  rendu_wow.ppm
M1/s7/HAI720I_progEfficace/TP1/: a.out  evalPerf.cpp  evalpoly.h  matmult.h  partie2.cpp  test.cpp  test.h
M1/s7/HAI720I_progEfficace/TP2/: a.out  blurred.pgm  copy-image.cpp  ex2.cu  ex3.cu  example1.cu  example2.cu  image-grey.pbm  image-pnm.h
M1/s7/HAI720I_progEfficace/TP_rendu/: EX20.md  eval-perf.cpp  eval-perf.h  ex20  ex20.cpp  ex21  ex21.cpp  tp_Gerardin_cc.md
M1/s8/HAI801I_algo_exploration/BFS_DFS/: Graph.js  MissCann.js  index.html  script.js  styles.css
M1/s8/HAI804I_analyse_images/Image3D/: image3D.cpp  image3d
M1/s8/HAI804I_analyse_images/PROJET/: cannyEdge  cannyEdges  cannyEdges.cpp  cg  ddpChien  ddpPerroquet  detection  detection.cpp  dilatation  dilatation.cpp  filtreMoyenneur  filtreMoyenneur.cpp  hysteresis  hysteresis.cpp  impaiting  impaiting.cpp
M1/s8/HAI804I_analyse_images/TP2/: 3d6e3d  3d6e3d.cpp  difference  difference.cpp  dilatation  dilatation.cpp  erosion  erosion.cpp  fermeture  fermeture.cpp  ouverture  ouverture.cpp  testGrey  test_grey.cpp
M1/s8/HAI804I_analyse_images/TP3/: Seuillage.cpp  egalisation  egalisation.cpp  expDyn  expDyn.cpp  expDynCouleur  expDynCouleur.cpp  histo.cpp  histoCouleur.cpp  histoRGB  seuillage  specialisation  specification.cpp
M1/s8/HAI804I_analyse_images/TP4/: Seuillage.cpp  flou  flouFond  flouFond.cpp  flouRGB.cpp  floutage  floutage.cpp  histo  ouverture  ouverture.cpp  ppmTopgm.cpp  toPGM
M1/s8/HAI804I_analyse_images/TP5/: carteGradient  carteGradient.cpp  filtre  filtreMoyenneur.cpp  hysteresis  hysteresis.cpp  hysteresisP  hysterisis.pgm  hysterisisPierre.cpp  laplace  laplacien  laplacien.cpp  passageZero  passageZero.cpp  passageZero2  passageZero2.cpp  profil  profil.cpp  seuil
M1/s8/HAI804I_analyse_images/TP6/: divise4  divise4.cpp  diviseRec  diviseRecursive.cpp
M1/s8/HAI809I_compression_multimedia/TP1/: ImageBase.cpp  main
M1/s8/HAI809I_compression_multimedia/TP2/: codeur  codeur.cpp  decodeur  decodeur.cpp
M2/s9/HAI918I_Image/IDC_3D/: CMakeLists.txt  README.md
M2/s9/HAI918I_Image/IDC_3D/tp/: main.cpp
(+955 files in other folders)
